refactor: adding aria-labels

--- a/templates/Admin/profil.html.twig
+++ b/templates/Admin/profil.html.twig
@@ -59,7 +59,7 @@
                 {% endblock %}
 			</section>
 		</div>
-		<button id='button-up' class="hide slow-opacity-reverse sticky z-30 bottom-12 h-9 w-9 md:h-14 md:w-14 left-[80%] bg-secondary text-primary rounded-full drop-shadow-lg hover:bg-400 duration-150 group"><i class="fa-solid fa-arrow-up button-full md:text-xl group-hover:text-secondary duration-150"></i></button>
+		<button aria-label="Revenir en haut de la page" id='button-up' class="hide slow-opacity-reverse sticky z-30 bottom-12 h-9 w-9 md:h-14 md:w-14 left-[80%] bg-secondary text-primary rounded-full drop-shadow-lg hover:bg-400 duration-150 group"><i class="fa-solid fa-arrow-up button-full md:text-xl group-hover:text-secondary duration-150"></i></button>
 	</main>
 {% endblock %}
 
