--- a/templates/Admin/profil_down/card/starter/starter.html.twig
+++ b/templates/Admin/profil_down/card/starter/starter.html.twig
@@ -28,7 +28,7 @@
 						{{ form_errors(form_card.price) }}
 					</small>
 				</div>
-				<button type="submit" id="add_image" class="bg-secondary text-primary hover:bg-primary hover:text-secondary duration-150 h-8 px-2 min-w-[2rem] sm-600:min-w-fit flex gap-2 justify-center items-center"><p class="hidden sm-600:block">Ajouter un plat</p><i class="fa-solid fa-plus"></i>
+				<button aria-label="Ajouter" type="submit" id="add_image" class="bg-secondary text-primary hover:bg-primary hover:text-secondary duration-150 h-8 px-2 min-w-[2rem] sm-600:min-w-fit flex gap-2 justify-center items-center"><p class="hidden sm-600:block">Ajouter un plat</p><i class="fa-solid fa-plus"></i>
 		</button>
 			</div>
 		</div>
