--- a/templates/Admin/profil_down/carousel.html.twig
+++ b/templates/Admin/profil_down/carousel.html.twig
@@ -21,7 +21,7 @@
                             {{ form_errors(form_image.title) }}
                         </small>
                     </div>
-                    <button type="submit" id="add_image" class="min-w-[2rem] sm-600:min-w-fit  h-8 px-2 flex gap-2 items-center bg-secondary text-primary hover:bg-primary hover:text-secondary whitespace-nowrap duration-150"><p class="hidden sm-700:block">Ajouter une image</p><i class="fa-solid fa-plus"></i></button>
+                    <button aria-label="Ajouter image" type="submit" id="add_image" class="min-w-[2rem] sm-600:min-w-fit  h-8 px-2 flex gap-2 items-center bg-secondary text-primary hover:bg-primary hover:text-secondary whitespace-nowrap duration-150"><p class="hidden sm-700:block">Ajouter une image</p><i class="fa-solid fa-plus"></i></button>
                 </div>
             </div>
             <div class="relative pt-2">
