--- a/templates/Login/login.form.html.twig
+++ b/templates/Login/login.form.html.twig
@@ -28,7 +28,7 @@
         <div class="form_inputContainer_2">
             <i class="fa-solid fa-lock form_icon"></i>
             <input type="password" id="password" class="form_input" name="_password" placeholder="Mot de passe">
-            <span role="button" onclick="togglePassword(event)" class="w-[36px]">
+            <span aria-label="Afficher ou non mot de passe" role="button" onclick="togglePassword(event)" class="w-[36px]">
                 <i class="fa-solid fa-eye hide button-full" ></i>
                 <i class="fa-solid fa-eye-slash button-full"></i>
             </span>
