--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,6 +1,6 @@
 <header class="no_print z-50 h-[80px] md:h-[100px] w-full absolute flex justify-between px-6 py-3 md:px-12 bg-transparent duration-300">
     <a href="{{ path('home') }}" class=""><img src={{ asset('/images/svg/'~ "logo-white.svg")}} alt="Logo Quai Antique blanc" class="h-full"></a>
-    <button class="md/5:hidden z-20 md/5:z-0" id="menu-hamburger">
+    <button class="md/5:hidden z-20 md/5:z-0" id="menu-hamburger" aria-label="Ouvrir/fermer menu">
         <div class="hamburger-lines close">
             <span class="line line1"></span>
             <span class="line line2"></span>
