--- a/templates/Card/card.html.twig
+++ b/templates/Card/card.html.twig
@@ -66,7 +66,7 @@
                     </li>
                 </ul>
             </section>
-            <div class="my-12 h-12 w-[200px] m-auto cursor-pointer flex items-center justify-center group md:w-[250px] md:h-[70px] button_style" id="card-booking"><a href="{{ path('reservation') }}" class="font-secondary group-hover:text-secondary duration-150 text-lg">Réservez maintenant !</a></div>
+            <button class="my-12 h-12 w-[200px] m-auto cursor-pointer flex items-center justify-center group md:w-[250px] md:h-[70px] button_style" id="card-booking"><a href="{{ path('reservation') }}" class="font-secondary group-hover:text-secondary duration-150 text-lg">Réservez maintenant !</a></button>
         </div>
         {% endblock %}
     </main>
