style: changing font for card description

--- a/templates/Card/Menus/menus.card.html.twig
+++ b/templates/Card/Menus/menus.card.html.twig
@@ -21,7 +21,7 @@
                                         <small class="">{{ offer.conditions }}</small>
                                         <ol class="list-disc list-inside" id="description">
                                         {% for description in offer.description %}
-                                            <li class="description">{{ description }}</li>
+                                            <li class="description card_description">{{ description }}</li>
                                         {% endfor %}
                                         </ol>
                                     </div>
