--- a/templates/Card/Starter/starter.card.html.twig
+++ b/templates/Card/Starter/starter.card.html.twig
@@ -16,7 +16,7 @@
                         <li>
                             <div>
                                 <h3>{{ food.title }}</h3>
-                                <p class="" >{{ food.description}}</p>
+                                <p class="card_description" >{{ food.description}}</p>
                             </div>
                             <p class="price">{{ food.price|number_format(2, '.', ',') }}</p>
                         </li>
