--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -250,7 +250,7 @@ header nav a.active::after {
   @apply min-h-full flex-1 flex flex-col mb-8;
 }
 .main-content section {
-  @apply text-secondary font-primary w-full relative flex-1 flex items-center;
+  @apply text-secondary w-full relative flex-1 flex items-center;
 } 
 #description .description {
   display: list-item;
@@ -275,7 +275,9 @@ header nav a.active::after {
   @apply relative top-1/2 text-center -translate-y-1/2;
 }
 /*  CARD - OPTIONS */
-
+.card_description {
+  @apply font-third text-[.9rem];
+}
 
 .box {
   @apply bg-500 rotate-45 absolute left-1/2 -translate-x-1/2 translate-y-[64%] duration-500 ease-in -z-10 shadow-md;
