style: adding items center to icon

--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -73,15 +73,15 @@
                             <a class="hover:underline hover:underline-offset-2" href="{{ 'mailto:'~ email }}">{{ email }}</a>
                         </li>
                         <li class="pt-2">
-                            <span class="flex gap-0">
+                            <span class="flex gap-0 items-center">
                                 <i class="fa-solid fa-city pr-2 h-fit"></i>
                                 <p class="flex-1">{{ street }}</p>
                             </span>
-                            <span class="flex">
+                            <span class="flex items-center">
                                 <i class="fa-solid fa-street-view pr-2 h-fit"></i>
                                 <p class="flex-1">{{ city }}</p>
                             </span>
-                            <span class="flex">
+                            <span class="flex items-center">
                                 <i class="fa-solid fa-house pr-2 h-fit"></i>
                                 <p class="flex-1">{{ postcode }}</p>
                             </span>
