--- a/templates/Reservation/user/reservation.user.html.twig
+++ b/templates/Reservation/user/reservation.user.html.twig
@@ -46,11 +46,12 @@
 								<small class="form_error" id="error_name"></small>
 							</div>
 							<div>
-								<label class="text-lg" for="places">Couverts :<label></legend>
+								<label class="text-lg" for="places">Couverts* :<label></legend>
 									<div class="w-20 flex items-center bg-500">
 										<i class="fa-solid fa-utensils form_icon"></i>
-										<input type="number" id="places" name="places" min="1" max="20" required class="pl-2 w-full bg-500 placeholder:text-secondary/50" placeholder="1">
+										<input type="number" id="places" name="places" min="1" max="20" required class="pl-2 w-full bg-500 placeholder:text-secondary/50" value="1">
 									</div>
+									<small class="text-[.85rem] flex">* Pour une réservation de 20 personnes et plus merci de contacter directement le restaurant.</small>
 									<small class="form_error" id="error_places"></small>
 								</div>
 								<div>
