--- a/templates/Reservation/admin/evening/evening.html.twig
+++ b/templates/Reservation/admin/evening/evening.html.twig
@@ -66,7 +66,7 @@
                         <p>{{ key + 1 }}</p>
                     </div>
                     <div class="bg-secondary text-primary">
-                        <p>{{ reservation.date|date('H:i', 'Europe/Paris') }}</p>
+                        <p>{{ reservation.date|date('H:i', false) }}</p>
                     </div>
                     <div class="bg-secondary text-primary">
                         <p>{{ reservation.name }}</p>
