--- a/templates/Reservation/admin/noon/noon.html.twig
+++ b/templates/Reservation/admin/noon/noon.html.twig
@@ -66,7 +66,7 @@
                         <p>{{ key + 1 }}</p>
                     </div>
                     <div class="bg-secondary">
-                        <p>{{ reservation.date|date('H:i', 'Europe/Paris') }}</p>
+                        <p>{{ reservation.date|date('H:i') }}</p>
                     </div>
                     <div class="bg-secondary">
                         <p>{{ reservation.name }}</p>
