--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -42,7 +42,7 @@
                 </li>
             {% else %}
                 <li>
-                    <a href={{ path('login') }} class="{{ '/inscription' in app.request.pathInfo ? 'active' : 'not-active' }}">Connexion</a>
+                    <a href={{ path('login') }} class="{{ '/connexion' in app.request.pathInfo ? 'active' : 'not-active' }}">Connexion</a>
                 </li>
                 <li>
                     <a href={{ path('sign_up') }} class="{{ app.request.attributes.get('_route') == 'sign_up' ? 'active' : 'not-active' }}">Inscription</a>
