--- a/templates/Card/Menus/menus.card.html.twig
+++ b/templates/Card/Menus/menus.card.html.twig
@@ -25,7 +25,7 @@
                                         {% endfor %}
                                         </ol>
                                     </div>
-                                    <p class="price">{{ offer.price|number_format(2, '.', ',') }}</p>
+                                    <p class="price">{{ offer.price|number_format(2, '.', ',') }} € TTC</p>
                                 </li>
                                 {% endfor %}
                             </ul>
