--- a/templates/Client/profil_down/reservations.html.twig
+++ b/templates/Client/profil_down/reservations.html.twig
@@ -9,7 +9,7 @@
         <section class="py-4 flex flex-col gap-6">
         {% for key,reservation in reservations %}
             <fieldset class="w-11/12 mx-auto max-w-[598px] border border-solid border-600 p-3 bg-secondary/10 rounded">
-                <legend class="px-2 text-lg">{{ reservation.date|date('l', 'Europe/Paris')|trans({'%day%' : reservation.date|date('l', 'Europe/Paris')}, 'days') }} {{ reservation.date|date('d/m/Y', 'Europe/Paris') }}</legend>
+                <legend class="px-2 text-lg">{{ reservation.date|date('l', 'UTC')|trans({'%day%' : reservation.date|date('l', 'UTC')}, 'days') }} {{ reservation.date|date('d/m/Y', 'UTC') }}</legend>
                 <div class="flex gap-2">
                     <div class="flex-1 flex flex-col gap-2">
                         <div class="flex gap-8">
@@ -17,7 +17,7 @@
                                 <label for="schedule-[]">Heure :</label>
                                 <div class="w-20 flex bg-500/20">
                                     <i class="fa-solid fa-clock form_icon"></i>
-                                    <input class="w-full bg-transparent" disabled type="text" id="schedule_{{ key }}" name="schedule" value="{{ reservation.date|date('H:i', 'Europe/Paris') }}">
+                                    <input class="w-full bg-transparent" disabled type="text" id="schedule_{{ key }}" name="schedule" value="{{ reservation.date|date('H:i', 'UTC') }}">
                                 </div>
                             </div>
                             <div>
