--- a/templates/Reservation/user/reservation.user.html.twig
+++ b/templates/Reservation/user/reservation.user.html.twig
@@ -204,7 +204,7 @@
 							</div>
 
 						</div>
-					{% elseif not 'ROLE_ADMIN' in app.user.roles %}
+					{% elseif app.user.template|length == 0 %}
 						<div class="mt-8 py-4 max-w-[589px] w-11/12 mx-auto lg:w-5/6 font-secondary border border-solid border-400 flex flex-col gap-8 items-center">
 							<p class="text-lg font-primary">Envie d'aller plus vite ?
 							</p>
