bug: removing some margin and padding and adding conditions to dataFixtures

--- a/templates/Card/Menus/menus.card.html.twig
+++ b/templates/Card/Menus/menus.card.html.twig
@@ -7,7 +7,7 @@
     <section class="flex-col" id="section-starter">
         <fieldset class="w-11/12 mx-auto max-w-[598px] border border-solid border-500 p-3 ">
             <legend>
-                <h2 class="px-2 text-xl">Menus</h2>
+                <h2 class="px-2 text-xl font-primary">Menus</h2>
             </legend>
                 <ul class="card-items">
                     {% for key, menu in menus %}
