--- a/templates/Card/Starter/starter.card.html.twig
+++ b/templates/Card/Starter/starter.card.html.twig
@@ -9,7 +9,7 @@
     <section class="" id="section-starter">
         <fieldset class="w-11/12 mx-auto max-w-[598px] border border-solid border-500 p-3 ">
             <legend>
-                <h2 class="px-2 text-xl">Entrées</h2>
+                <h2 class="px-2 text-xl font-primary">Entrées</h2>
             </legend>
                 <ul class="card-items">
                     {% for food in foods %}
