--- a/templates/Admin/profil_down/card/menus/menus.html.twig
+++ b/templates/Admin/profil_down/card/menus/menus.html.twig
@@ -15,8 +15,8 @@
             </div>
             <button type="button" class="mt-8 text-sm duration-150 hover:bg-secondary hover:text-primary add_item_link text-secondary bg-primary/50 px-4 py-2 relative left-1/2 -translate-x-1/2 my-3" data-collection-holder-class="offers">Ajouter une formule</button>
         </div>
-        <p class="py-2 underline underline-offset-2">Formules :</p>
-        <ul class="offers text-sm pt-4"
+        <p class="pt-2 underline underline-offset-2">Formules :</p>
+        <ul class="offers text-sm"
             data-index="{{ form_menu.offers|length > 0 ? form_menu.offers|last.vars.name + 1 : 0 }}"
             data-prototype="{{ _self.offers_prototype_empty(form_menu.offers.vars.prototype)|e('html_attr') }}"
             >
