--- a/templates/Card/Main/main.card.html.twig
+++ b/templates/Card/Main/main.card.html.twig
@@ -8,7 +8,7 @@
     <section class="" id="section-starter">
         <fieldset class="w-11/12 mx-auto max-w-[598px] border border-solid border-500 p-3 ">
             <legend>
-                <h2 class="px-2 text-xl">Plats</h2>
+                <h2 class="px-2 text-xl font-primary">Plats</h2>
             </legend>
                 <ul class="card-items">
                     {% for food in foods %}
