style: missing a leter

--- a/templates/Admin/profil_down/card/menus/menus.html.twig
+++ b/templates/Admin/profil_down/card/menus/menus.html.twig
@@ -150,7 +150,7 @@
         {{ _self.compositions_prototype(key, composition, key_offer, key_menu) }}
     {% endfor %}
     </ol>
-    <div class="my-2 relative after:conten-[''] before:absolute before:w-[100px] before:h-px before:bg-secondary before:opacity-50 before:-top-2">
+    <div class="my-2 relative after:content-[''] before:absolute before:w-[100px] before:h-px before:bg-secondary before:opacity-50 before:-top-2">
         <label for="{{ 'menu_'~ key_menu ~'_price_'~ key_offer }}" hidden>Prix :</label>
         <div class="flex items-center input_profil w-[120px]">
             <i class="fa-solid fa-euro-sign form_icon bg-primary/20"></i>
