--- a/templates/Client/profil.html.twig
+++ b/templates/Client/profil.html.twig
@@ -72,7 +72,7 @@
                         </div>
                         <small class="col-start-2 hide -top-1 relative form_error" id="error_validPassword"></small>
                         <label for="old_password" class="hide change_password hidden_label">Ancien mot de passe :</label>
-                        <div class="col-start-2 hide form_profilContainer bg-400/20 input_profil hide change_password relative py-1">
+                        <div class="col-start-2 hide form_profilContainer bg-400/20 input_profil hide change_password relative py-1 mt-2">
                             <i class="fa-solid fa-lock form_icon"></i>
                             <input class="input_whitePlaceholder" type="password" minlength=8 maxlength=80 name="old_password" id="old_password" placeholder="Ancien mot de passe" pattern="\^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,80}$\" required title="Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscle et un chiffre.">
                             <span aria-label="Afficher ou non mot de passe" role="button" onclick="togglePassword(event)">
